--- a/code/style.css
+++ b/code/style.css
@@ -1,28 +1,15 @@
-/*OUTSTANDING ISSUES
-- Navbar set to fixed to be "aligned" 
-with header bar which is positioned absolute. Problem:
-When scrolling and navbar visable it covers other section. 
-
--Animation on images "figure". Span2 before and after the lines
-are black to start with to end up white as I want them to be.
-
-*/
-
-
 * {
   margin: 0;
   padding:0;
   box-sizing: border-box;
 }
 
-body     {
-  /*padding-top: 150px;*/
-  
-}
 
 h1 {
   margin: 50px 25px 50px;
   font-weight: 400;
+  text-transform: uppercase;
+
 }
 
 h2 {
@@ -159,12 +146,9 @@ main h2 {
 
 .smallNews-image {
   width: 100%;
-  /*height: 90%; */
   justify-content: center;
   align-self: center;
 }
-
-
 
 
 .figure:hover h3 {
@@ -217,7 +201,7 @@ main h2 {
   margin: 0 auto;
 }
 
-/*ANIMATION ON HOVER */
+/*BORDER ANIMATION ON HOVER */
 
 .figure:hover .span1:before {
   animation: border-top 0.3s linear;
@@ -302,7 +286,14 @@ footer i:hover {
 /***** MEDIA QUERIES TABLET ******/
 
 @media (min-width: 768px) {
-  nav {
+  h3 {
+    font-size: 32px;
+  }
+  
+  p {
+    font-size: 18px;
+  }
+    nav {
     display: inline-block;
   }
 
@@ -322,15 +313,6 @@ footer i:hover {
   .figure {
   flex-basis: 40%;
   }
-
-  h3 {
-  font-size: 32px;
-  }
-
-  p {
-    font-size: 18px;
-  }
-
 }
 
 
