adjust title font size for small mobile phone

--- a/code/style.css
+++ b/code/style.css
@@ -39,11 +39,13 @@ figure {
 }
 
 
-@media screen and (max-width:410px){
+@media screen and (max-width:415px){
   .header__title{
     white-space: normal;
+    font-size: 51px;
   }
 }
+
 
 .header__title:visited{
 text-decoration: black;
