margin-right added to hamburger div

--- a/style.css
+++ b/style.css
@@ -44,12 +44,13 @@ nav a :hover {
   display: flex; 
   width: 25px;
   height: 25px; 
+  margin-right: 2px;
   flex-direction: column;
   justify-content: space-between;
 }
 
 .hamburger div {
-  width: 30px;
+  width: 25px;
   height: 5px;
   background: #000;
 }
