--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ label {
 
   .flex-child {
     width: 45%;
-    height: 310px;
+    height: 330px;
 }
 
 /* MEDIA QUERY DESKTOP */
@@ -319,4 +319,4 @@ label {
     animation-name: push;
     animation-duration: 2s;
   }
-}
+}}
