changed align text news container

--- a/code/style.css
+++ b/code/style.css
@@ -73,9 +73,10 @@ header p {
 /***NEWS CONTENT***/
 .news-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: column;  
   text-align: center;
   justify-content: center;
+  align-items: center;
 }
 
 .news-container img {
