--- a/code/style.css
+++ b/code/style.css
@@ -6,9 +6,16 @@ html {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 h1 {
   color: rgb(0, 0, 0);
   font-size: 28px;
+  margin-left: 75px;
   padding: 10px;
   padding-right: 5px;
   text-shadow: 2px 2px 5px rgb(163, 163, 163);
@@ -33,21 +40,28 @@ p {
   padding: 8px;  
 }
 
-header { 
+hr {
+  width: 100%;
+}
+
+  header { 
   background-color: rgba(255, 255, 255, 0.747);
-  height: 120px;
+  height: 80px;
   width: 380px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: left;
   margin-top: 10px;
 }
 
 .hamburger {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 20px;
   height: 20px;
+  margin-left: 15px;
 }
 
 .hamburger div {
@@ -55,17 +69,17 @@ header {
   height: 3px;
   background-color: rgb(65, 211, 155);
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
-nav {
+.left, .right {
   color: #000;
   font-size: 16px;
   text-decoration: none;
   display: none;
 }
 
-nav a {
+.left-links, .right-links {
   color:rgb(65, 211, 155);
   text-decoration: none;
 }
@@ -153,19 +167,24 @@ footer {
   width: 100%;
 }
 
+/*** TABLET VIEW ***/
 @media (min-width: 768px) {
 
   header {
     width: 100%;  
-    height: 200px;
+    height: 130px;
+    align-items: center;
+    justify-content: space-between;
 }
 
   h1 {
-    font-size:48px;
+    font-size:60px;
+    margin-left: 20px; 
 }
 
   h2 {
     font-size: 30px;
+    margin-top: 30px;
 }
 
   h3 {
@@ -177,8 +196,11 @@ footer {
 }
 
   .main {
+    flex-direction: row;
+    align-items: center;
     width: 100%;
     height: 100%;
+    padding-bottom: 20px;
 }
 
   img {
@@ -189,8 +211,40 @@ footer {
     display: none;
 }
   
-  nav a {
-   display: block;
+  nav {
+   display: flex;
+  }
+
+  .left {
+    display: flex;
+    align-items: center;
+    padding-top: 25px;
+    padding-right: 10px;
+    font-size: 20px;
+  }
+
+  .right {
+    display: flex;
+    align-items: center;
+    padding-top: 25px;
+    padding-left: 25x;
+    font-size: 20px;
+  }
+
+  .left-links {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 60px;
+  }
+
+  .right-links {
+    display: flex;
+    justify-content: space-between;
+    margin-left: 50px;
+  }
+
+  .left, .right, a:hover {
+    color: #000;
   }
 
   .main a:link {
@@ -198,7 +252,8 @@ footer {
 }
   
   #mainphoto {  
-    width: 97%;
+    width: auto;
+    height: 320px;
 }
   
    .card {
