add transition for hovering effects

--- a/code/style.css
+++ b/code/style.css
@@ -217,6 +217,8 @@ img.logo-navbar {
     font-family: 'Open Sans Condensed', sans-serif, Arial, Helvetica;
     cursor: pointer;
     box-shadow: 1px 1px 2px -1px rgba(46,46,46,1);
+    transition-duration: 0.4s;
+
   }
   
   button.newsletter:hover {
@@ -297,6 +299,7 @@ a.intro-big {
   img.large {
     width: 80%;
     margin-top: 70px;
+    transition-duration: 0.4s;
   }
   
   img.large:hover {
@@ -471,6 +474,7 @@ h3.travel {
   
   img.small {
     width: 100%;
+    transition-duration: 0.4s;
   }
   
   img.small:hover {
@@ -613,6 +617,7 @@ img.medium {
   img.medium {
     width: 100%;
     margin-bottom: 5px;
+    transition-duration: 0.4s;
     }
   
   img.medium:hover {
