changed one comment

--- a/code/style.css
+++ b/code/style.css
@@ -193,7 +193,7 @@ main .card-container {
 }
 
 /* MEDIA QUERIES */
-/* På skärmar större än 1025 px ska det bli fyra cards per row */
+/* På skärmar större än 1025 px */
 @media screen and (min-width: 1025px) {
 
   .big-news .big-news-text .artikel {
