--- a/code/style.css
+++ b/code/style.css
@@ -19,41 +19,48 @@ body {
   margin: 0;
 }
 
-main{
+main {
   background: #F8E1AA;
   margin: 0 25px;
+  max-width: 1100px;
 }
 
 h2 {
-  font-size: 44px;
+  font-size: 24px;
+  margin-bottom: 0px;
 }
 
 h3 {
   font-size: 26px;
+  margin-bottom: 0px;
 }
 
 h4 {
   font-size: 20px;
-  /* text-align: center; */
+  margin: 16px 0;
+}
+
+p {
+  font-size: 14px;
+  margin-bottom: 0px;
 }
 
 /*** HEADER ***/
 
 header {
-  background: #6236FF;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 30px 0px 30px 20px;
+  padding: 30px 0px 30px 25px;
 }
 
 header img {
-  width: 250px;
+  width: 180px;
 }
 
 nav {
   display: none;
-  padding: 0 20px;
+  padding: 0 25px;
 }
 
 nav a {
@@ -86,7 +93,6 @@ nav a {
   width: 100%;
   max-width: 1100px;
   margin: 0 auto;
-  padding: 16px;
 }
 
 .big-news img {
@@ -95,54 +101,22 @@ nav a {
 }
 
 .big-news div {
+  margin: 0 16px;
   text-align: center;
 }
 
-/*** ARTICLE NEWS ***/
-
-.small-news {
-  margin: 16px;
-}
-
-.small-news div {
-  width: 100%;
-  text-align: center;
-}
-
-.article-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  max-width: 1100px;
-  margin: auto;
-}
-
-.article-container a {
-  background: #9c5ace;
-  border: 2px solid #24292d;
-  border-radius: 5px;
-  width: 100%;
-  text-decoration: none;
-  color: #000;
-  box-shadow: 12px 12px 0 0 #999;
-  padding: 16px;
-  margin-bottom: 16px;
-  vertical-align: middle;
-}
-
-.article-container a img {
-  width: 80%;
-  margin: 16px;
+.big-news p {
+  text-align: left;
 }
 
 /*** ARTICLE NEWS GRID ***/
 
-.grid-wrapper {
+.wrapper {
   margin: 16px;
+  padding-top: 25px;
 }
-  
-.grid-wrapper div {
+
+.wrapper div {
   width: 100%;
   text-align: center;
 }
@@ -155,23 +129,14 @@ nav a {
   grid-template-columns: repeat(1, 1fr);
 }
 
-.grid-article {
-  background: blue;
-  color: white;
-  padding: 16px;
-  align-content: center;
-}
-
-.grid-article a img {
-  width: 80%;
-  height: auto;
-  margin: 16px;
-}
-
 /*** POLAROID IMAGES ***/
 
 .item {
   filter: grayscale(100%);
+}
+
+.item a {
+  text-decoration: none;
 }
 
 .polaroid {
@@ -212,13 +177,74 @@ nav a {
   transition: all 0.35s;
 }
 
+/*** ARTICLE NEWS ***/
+
+.article-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  max-width: 1100px;
+  margin: auto;
+  margin-top: 45px;
+  padding: 16px;
+}
+
+.article-container a {
+  background: #fff;
+  width: 100%;
+  text-decoration: none;
+  color: #000;
+  padding: 16px;
+  margin: 25px 0;
+  text-align: center;
+}
+
+.article-container a:hover {
+  animation-name: scale-shake;
+  animation-duration: 1s;
+  box-shadow: none;
+}
+
+.article-container a img {
+  width: 90%;
+  margin: 16px;
+}
+
+@keyframes scale-shake {
+  20% {
+    transform: scale(1.3) rotate(-15deg);
+  }
+  40% {
+    transform: scale(1.3) rotate(12deg);
+  }
+  60% {
+    transform: scale(1.3) rotate(-9deg);
+  }
+  80% {
+    transform: scale(1.3) rotate(6deg);
+  }
+  100% {
+    transform: scale(1) rotate(0deg);
+  }
+}
+
 /*** MEDIA QUERIES ***/
 
 @media (min-width: 768px) {
 
+  h2 {
+    font-size: 42px;
+  }
+
   header {
     justify-content: space-between;
   }
+
+  header img {
+    width: 250px;
+  }
+
   nav {
     display: inline-block;
   }
@@ -228,17 +254,11 @@ nav a {
   }
 
   .big-news div {
-    text-align: left;
+    margin: 0 25px;
   }
 
-  .article-container {
-    justify-content: space-between;
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-
-  .article-container a {
-    width: 45%;
+  .big-news p {
+    text-align: center;
   }
 
   .grid-articles { 
@@ -246,13 +266,31 @@ nav a {
     justify-content: center;
   }
 
+  .article-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .article-container a {
+    width: 45%;
+  }
 }
 
 @media (min-width: 1024px) {
 
+  main {
+    width: 85%;
+    margin: 0 auto;
+  } 
+
+  h2 {
+    margin: 0;
+  }
+
   .big-news {
-    flex-direction: row-reverse;
-    align-items: center;
+    flex-direction: row;
+    padding: 48px 16px;
   }
 
   .big-news img {
@@ -260,14 +298,20 @@ nav a {
   }
 
   .big-news div {
-    margin-left: 16px;
+    align-self: flex-start;
+    margin-left: 25px;
+    text-align: left;
   }
-  
-  .article-container a {
-    width: 22%;
+
+  .big-news p {
+    text-align: left;
   }
 
   .grid-articles { 
     grid-template-columns: repeat(4, 1fr); 
+  }
+
+  .article-container a {
+    width: 22%;
   }
 }
