--- a/code/style.css
+++ b/code/style.css
@@ -81,7 +81,57 @@ nav {
 }
 
 .big-news div {
-  text-align: center                                                                                                                                                                                                                                                                                                                                     ;
+  text-align: center;                                                                                                                                                                                                                                                                                                                             ;
+}
+
+.heart {
+  background-color: darkred;
+  display: inline-block;
+  height: 50px;
+  margin-top: 30px;
+  top: 0;
+  transform: rotate(-45deg);
+  width: 50px;
+  animation: heartbeat 1s infinite; 
+}
+
+.heart:before,
+.heart:after {
+  content: "";
+  background-color: darkred;
+  border-radius: 50%;
+  height: 50px;
+  position: absolute;
+  width: 50px;
+}
+
+.heart:before {
+  top: -25px;
+  left: 0;
+}
+
+.heart:after {
+  left: 25px;
+  top: 0;
+}
+
+@keyframes heartbeat
+{
+  0%
+  {
+    transform: scale( 1 )
+      rotate(-45deg);    
+  }
+  20%
+  {
+    transform: scale( 1.25 )
+      rotate(-45deg);  
+  }
+   40%
+  {
+    transform: scale( 1.5 )
+      rotate(-45deg);
+  }
 }
 
 /* NEWS */
@@ -186,7 +236,7 @@ footer img {
   .link2 {
     grid-column: 2;
     grid-row: 1;
-    place-self: center;
+   place-self: center;
   }
 
   .link3 {
@@ -202,7 +252,7 @@ footer img {
   }
 
   .big-news div {
-      text-align: left;
+    text-align: left;
   }
 
   .news p {
@@ -258,6 +308,7 @@ footer img {
 
   .big-news div {
     margin-left: 30px;
+    text-align: left;
   }  
 
   .big-news img {
