--- a/code/style.css
+++ b/code/style.css
@@ -1,13 +1,3 @@
-@font-face {
-  font-family: compactaItalic;
-  src: url("./Fonts/CompactaItalicRegular.ttf");
-}
-
-@font-face {
-  font-family: backstreet;
-  src: url("./Fonts/Backstreet.ttf");
-}
-
 * {
   box-sizing: border-box;
 }
@@ -15,7 +5,7 @@
 body {
   background: #6236FF;
   color: #000000;
-  font-family: "roboto mono", backstreet;
+  font-family: "roboto mono", serif;
   margin: 0;
 }
 
@@ -69,10 +59,15 @@ nav a {
   margin-left: 16px;
 }
 
+nav a:hover {
+  color: #f8e1aa;
+  font-size: 120%;
+}
+
 .hamburger {
   display: flex;
   width: 35px;
-  height: 35px;
+  height: 30px;
   flex-direction: column;
   justify-content: space-between;
   margin-right: 25px;
@@ -136,6 +131,7 @@ nav a {
 }
 
 .item a {
+  color: #000;
   text-decoration: none;
 }
 
@@ -202,7 +198,7 @@ nav a {
 
 .article-container a:hover {
   animation-name: scale-shake;
-  animation-duration: 1s;
+  animation-duration: 0.8s;
   box-shadow: none;
 }
 
@@ -211,22 +207,37 @@ nav a {
   margin: 16px;
 }
 
-@keyframes scale-shake {
-  20% {
-    transform: scale(1.3) rotate(-15deg);
-  }
-  40% {
-    transform: scale(1.3) rotate(12deg);
-  }
-  60% {
-    transform: scale(1.3) rotate(-9deg);
-  }
-  80% {
-    transform: scale(1.3) rotate(6deg);
-  }
-  100% {
-    transform: scale(1) rotate(0deg);
-  }
+/*** FOOTER ***/
+
+footer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.footer {
+  color: #000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 10px;
+}
+
+.footer div {
+  margin-top: 14px;
+}
+
+.footer a {
+  color: #000;
+  margin: 20px;
+  margin-right: 20px;
+  margin-left: 20px; 
+  font-size: 30px;
+}
+
+.footer a:hover {
+  color:#f8e1aa;
+  font-size: 220%;
 }
 
 /*** MEDIA QUERIES ***/
@@ -235,10 +246,6 @@ nav a {
 
   h2 {
     font-size: 42px;
-  }
-
-  header {
-    justify-content: space-between;
   }
 
   header img {
@@ -313,5 +320,23 @@ nav a {
 
   .article-container a {
     width: 22%;
+  }
+}
+
+@keyframes scale-shake {
+  20% {
+    transform: scale(0.5) rotate(-15deg);
+  }
+  40% {
+    transform: scale(1.1) rotate(12deg);
+  }
+  60% {
+    transform: scale(1.1) rotate(-9deg);
+  }
+  80% {
+    transform: scale(1.1) rotate(6deg);
+  }
+  100% {
+    transform: scale(1) rotate(0deg);
   }
 }
